# w25q-rs

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: driver.rs  littlefs.rs  stm32f401.rs
src/: interface.rs  io.rs  lib.rs  littlefs.rs  mem.rs  registers.rs  types.rs
