[package]
name = "w25q"
version = "0.1.0"
edition = "2021"

authors = ["Mike Sutherland <msutherland@fastmail.com>"]
repository = ""
license = "MPL 2.0"
description = "embedded-hal Rust driver for W25Q. Uses embedded-hal-bus."
readme = "README.md"
keywords = [
    "inertial",
    "accelerometer",
    "gyroscope",
    "imu",
    "embedded-hal-driver",
]
categories = ["embedded", "hardware-support", "no-std"]
include = ["/**/*.rs", "/Cargo.toml", "/README.md", "/CHANGELOG.md", "/LICENSE"]

[features]
default = []
defmt = ["dep:defmt", "embedded-io/defmt-03"]

[dependencies]
embedded-hal = "1.0"
defmt = { version = "0.3", optional = true }
embedded-io = { version = "0.6.1", default-features = false }

# Necessary to load the example code.
[dev-dependencies]
embedded-hal-bus = "0.2"
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
stm32f4xx-hal = { version = "0.20", features = ["stm32f401"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
